--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
     <!-- google font -->
 </head>
 <body>
+    <!-- google font -->
     <header>
         <div class="container">
-            <h1 class="logo">مكتبة عنوان الانجاز</h1>
+            <img class="logo" src="images/logo.png" alt="">
             <div class="links">
                 <span class="icon">
                     <span></span>
@@ -52,7 +53,10 @@
             </div>
         </div>
     </header>
+    <!-- google font -->
+    <!-- google font -->
     <div class="landing">
+        <div class="overly"></div>
         <div class="container">
             <div class="text">
                 <h2>مرحبا بكم في مكتبة عنوان الانجاز</h2>
@@ -64,5 +68,8 @@
             </div>
         </div>
     </div>
+    <!-- google font -->
+    <!-- google font -->
+    <!-- google font -->
 </body>
 </html>
