--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- google font -->
 </head>
 <body>
-    <!-- google font -->
+    <!-- start header -->
     <header>
         <div class="container">
             <img class="logo" src="images/logo.png" alt="">
@@ -45,7 +45,7 @@
                 </span>
                 <ul>
                     <li><a href="#home">الرئيسية</a></li>
-                    <li><a href="#prodact">منتجاتنا</a></li>
+                    <li><a href="#features">منتجاتنا</a></li>
                     <li><a href="#massege">رؤيتنا</a></li>
                     <li><a href="#hawwe">من نحن</a></li>
                     <li><a href="#contactus">اتصل بنا</a></li>
@@ -53,8 +53,8 @@
             </div>
         </div>
     </header>
-    <!-- google font -->
-    <!-- google font -->
+    <!-- end header -->
+    <!-- start landing -->
     <div class="landing">
         <div class="overly"></div>
         <div class="container">
@@ -68,8 +68,33 @@
             </div>
         </div>
     </div>
-    <!-- google font -->
-    <!-- google font -->
-    <!-- google font -->
+    <!-- end landing -->
+    <!-- start features -->
+    <div class="features">
+        <div class="container">
+            <div class="special-heading">
+                <h2>خدماتنا</h2>
+                <p>نقدم لكم كوكبة من الخدمات الالكترونية الحكومية , والتجارية , والطلابية , تحت سقف واحد وعبر منصة الكترونية واحدة</p>
+            </div>
+            <div class="featurs">
+                <div class="featur">
+                    <img src="images/absher.png" alt="">
+                    <h3>خدمات أبشر</h3>
+                    <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
+                </div>
+                <div class="featur">
+                    <img src="images/teg.png" alt="">
+                    <h3>الخدمات التجارية</h3>
+                    <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
+                </div>
+                <div class="featur">
+                    <img src="images/min.png" alt="">
+                    <h3>الخدمات الطلابية</h3>
+                    <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end features -->
 </body>
 </html>
