--- a/index.html
+++ b/index.html
@@ -84,6 +84,36 @@
                 </div>
                 <div class="featur">
                     <img src="images/teg.png" alt="">
+                    <h3>خدمات وزارة التجارة</h3>
+                    <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
+                </div>
+                <div class="featur">
+                    <img src="images/min.png" alt="">
+                    <h3>الخدمات الطلابية</h3>
+                    <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
+                </div>
+                <div class="featur">
+                    <img src="images/absher.png" alt="">
+                    <h3>نماء</h3>
+                    <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
+                </div>
+                <div class="featur">
+                    <img src="images/teg.png" alt="">
+                    <h3>خدمات وزارة التجارة</h3>
+                    <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
+                </div>
+                <div class="featur">
+                    <img src="images/min.png" alt="">
+                    <h3>المرور</h3>
+                    <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
+                </div>
+                <div class="featur">
+                    <img src="images/absher.png" alt="">
+                    <h3>خدمات أبشر</h3>
+                    <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
+                </div>
+                <div class="featur">
+                    <img src="images/teg.png" alt="">
                     <h3>الخدمات التجارية</h3>
                     <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
                 </div>
@@ -92,6 +122,52 @@
                     <h3>الخدمات الطلابية</h3>
                     <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
                 </div>
+                <div class="featur">
+                    <img src="images/absher.png" alt="">
+                    <h3>خدمات أبشر</h3>
+                    <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
+                </div>
+                <div class="featur">
+                    <img src="images/teg.png" alt="">
+                    <h3>خدمات وزارة التجارة</h3>
+                    <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
+                </div>
+                <div class="featur">
+                    <img src="images/min.png" alt="">
+                    <h3>الخدمات الطلابية</h3>
+                    <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
+                </div>
+                <div class="featur">
+                    <img src="images/absher.png" alt="">
+                    <h3>نماء</h3>
+                    <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
+                </div>
+                <div class="featur">
+                    <img src="images/teg.png" alt="">
+                    <h3>خدمات وزارة التجارة</h3>
+                    <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
+                </div>
+                <div class="featur">
+                    <img src="images/min.png" alt="">
+                    <h3>المرور</h3>
+                    <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
+                </div>
+                <div class="featur">
+                    <img src="images/absher.png" alt="">
+                    <h3>خدمات أبشر</h3>
+                    <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
+                </div>
+                <div class="featur">
+                    <img src="images/teg.png" alt="">
+                    <h3>الخدمات التجارية</h3>
+                    <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
+                </div>
+                <div class="featur">
+                    <img src="images/min.png" alt="">
+                    <h3>الخدمات الطلابية</h3>
+                    <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
+                </div>
+
             </div>
         </div>
     </div>
