--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <!-- end landing -->
     <!-- start features -->
-    <div class="features">
+    <div class="features" id="features">
         <div class="container">
             <div class="special-heading">
                 <h2>خدماتنا</h2>
