--- a/index.html
+++ b/index.html
@@ -118,42 +118,42 @@
                     <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
                 </div>
                 <div class="featur">
-                    <img src="images/min.png" alt="">
+                    <img src="images/yem.png" alt="">
                     <h3>الخدمات الطلابية</h3>
                     <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
                 </div>
                 <div class="featur">
-                    <img src="images/absher.png" alt="">
+                    <img src="images/3ml.png" alt="">
                     <h3>خدمات أبشر</h3>
                     <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
                 </div>
                 <div class="featur">
-                    <img src="images/teg.png" alt="">
+                    <img src="images/air001.png" alt="">
                     <h3>خدمات وزارة التجارة</h3>
                     <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
                 </div>
                 <div class="featur">
-                    <img src="images/min.png" alt="">
+                    <img src="images/balady.png" alt="">
                     <h3>الخدمات الطلابية</h3>
                     <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
                 </div>
                 <div class="featur">
-                    <img src="images/absher.png" alt="">
+                    <img src="images/kharjy.png" alt="">
                     <h3>نماء</h3>
                     <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
                 </div>
                 <div class="featur">
-                    <img src="images/teg.png" alt="">
+                    <img src="images/najez.png" alt="">
                     <h3>خدمات وزارة التجارة</h3>
                     <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
                 </div>
                 <div class="featur">
-                    <img src="images/min.png" alt="">
+                    <img src="images/qiua.png" alt="">
                     <h3>المرور</h3>
                     <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
                 </div>
                 <div class="featur">
-                    <img src="images/absher.png" alt="">
+                    <img src="images/sudan.png" alt="">
                     <h3>خدمات أبشر</h3>
                     <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
                 </div>
