--- a/index.html
+++ b/index.html
@@ -143,17 +143,17 @@
                     <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
                 </div>
                 <div class="featur">
-                    <img src="images/najez.png" alt="">
+                    <img src="images/sudan.png" alt="">
                     <h3>خدمات وزارة التجارة</h3>
                     <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
                 </div>
                 <div class="featur">
-                    <img src="images/qiua.png" alt="">
+                    <img src="images/min.png" alt="">
                     <h3>المرور</h3>
                     <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
                 </div>
                 <div class="featur">
-                    <img src="images/sudan.png" alt="">
+                    <img src="images/absher.png" alt="">
                     <h3>خدمات أبشر</h3>
                     <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
                 </div>
