--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="featur">
                     <img src="images/nama.png" alt="">
-                    <h3>نماء</h3>
+                    <h3>خدمات نماء</h3>
                     <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
                 </div>
                 <div class="featur">
@@ -104,47 +104,47 @@
                 </div>
                 <div class="featur">
                     <img src="images/najez.png" alt="">
-                    <h3>المرور</h3>
+                    <h3>خدمات ناجز ووزارة العدل</h3>
                     <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
                 </div>
                 <div class="featur">
                     <img src="images/khrb.png" alt="">
-                    <h3>خدمات أبشر</h3>
+                    <h3>خدمات الشركة السعودية للكهرباء</h3>
                     <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
                 </div>
                 <div class="featur">
                     <img src="images/qiua.png" alt="">
-                    <h3>الخدمات التجارية</h3>
+                    <h3>خدمات قوى</h3>
                     <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
                 </div>
                 <div class="featur">
                     <img src="images/yem.png" alt="">
-                    <h3>الخدمات الطلابية</h3>
+                    <h3>خدمات السفارة اليمنية</h3>
                     <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
                 </div>
                 <div class="featur">
                     <img src="images/3ml.png" alt="">
-                    <h3>خدمات أبشر</h3>
+                    <h3>خدمات وزارة العمل</h3>
                     <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
                 </div>
                 <div class="featur">
                     <img src="images/air001.png" alt="">
-                    <h3>خدمات وزارة التجارة</h3>
+                    <h3>خدمات الخطوط الجوية السعودية </h3>
                     <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
                 </div>
                 <div class="featur">
                     <img src="images/balady.png" alt="">
-                    <h3>الخدمات الطلابية</h3>
+                    <h3>الخدمات بلدي</h3>
                     <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
                 </div>
                 <div class="featur">
                     <img src="images/kharjy.png" alt="">
-                    <h3>نماء</h3>
+                    <h3>خدمات وزارة الخارجية</h3>
                     <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
                 </div>
                 <div class="featur">
                     <img src="images/sudan.png" alt="">
-                    <h3>خدمات وزارة التجارة</h3>
+                    <h3>خدمات السفارة السودانية </h3>
                     <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
                 </div>
                 <div class="featur">
