--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!---->
     <link rel="stylesheet" href="">
     <!---->
-    <link rel="stylesheet" href="">
+    <link rel="shortcut icon" href="images/logo.png" type="image/logo">
     <!--  website name -->
     <title>مكتبة عنوان الانجاز</title>
     <!-- google font -->
