--- a/index.html
+++ b/index.html
@@ -148,22 +148,22 @@
                     <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
                 </div>
                 <div class="featur">
-                    <img src="images/min.png" alt="">
+                    <img src="images/mor.png" alt="">
                     <h3>المرور</h3>
                     <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
                 </div>
                 <div class="featur">
-                    <img src="images/absher.png" alt="">
+                    <img src="images/adel.png" alt="">
                     <h3>خدمات أبشر</h3>
                     <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
                 </div>
                 <div class="featur">
-                    <img src="images/teg.png" alt="">
+                    <img src="images/nas.png" alt="">
                     <h3>الخدمات التجارية</h3>
                     <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
                 </div>
                 <div class="featur">
-                    <img src="images/min.png" alt="">
+                    <img src="images/qat.png" alt="">
                     <h3>الخدمات الطلابية</h3>
                     <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
                 </div>
