--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- font awesome file -->
     <link rel="stylesheet" href="css/all.min.css">
     <!---->
-    <link rel="stylesheet" href="">
+    <link rel="fonts" href="fonts/alfont_com_Manifa-V2.ttf">
     <!---->
     <link rel="shortcut icon" href="images/icon.png" type="image/icon">
     <!--  website name -->
@@ -172,5 +172,21 @@
         </div>
     </div>
     <!-- end features -->
+    <!-- start roya -->
+     <div class="roya" id="massege">
+        <div class="overly"></div>
+        <div class="container">
+            <div class="special-heading">
+                <h2>رؤيتنا</h2>
+                <p>بكم نسعى لنكون الاول والرائد في مجال الخدمات
+                     الالكترونية الموثوقة والمبتكرة مما يسهم في تسهيل حياة الافراد وتعزيز كفاءة المسسات من خلال التحول الرقمي وبذلك نقدم حلول
+                     الكترونية متكاملة باعلى معايير الجودة مع التركيز على تحقيق رضا العملاء وتلبية احتياجاتهم بكفائة واحترافية ومسؤولية</p>
+            </div>
+            <div class="roy">
+                
+            </div>
+        </div>
+     </div>
+    <!-- end roya -->
 </body>
 </html>
