--- a/index.html
+++ b/index.html
@@ -183,7 +183,18 @@
                      الكترونية متكاملة باعلى معايير الجودة مع التركيز على تحقيق رضا العملاء وتلبية احتياجاتهم بكفائة واحترافية ومسؤولية</p>
             </div>
             <div class="roy">
-                
+                <div class="text">
+                    <h2>100 عميل</h2>
+                    <p>Pot helping</p>
+                </div>
+                <div class="text">
+                    <h2>1000+ خدمة</h2>
+                    <p>Pot helping</p>
+                </div>
+                <div class="text">
+                    <h2>100+ طلب</h2>
+                    <p>Pot helping</p>
+                </div>
             </div>
         </div>
      </div>
