--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                     <li><a href="#home">الرئيسية</a></li>
                     <li><a href="#features">منتجاتنا</a></li>
                     <li><a href="#massege">رؤيتنا</a></li>
-                    <li><a href="#hawwe">من نحن</a></li>
-                    <li><a href="#contactus">اتصل بنا</a></li>
+                    <li><a href="#foteer">اتصل بنا</a></li>
                 </ul>
             </div>
         </div>
@@ -199,5 +198,33 @@
         </div>
      </div>
     <!-- end roya -->
+    <!-- start foteer -->
+     <div class="foteer" id="foteer">
+        <div class="container">
+            <div class="royaa">
+                <h4>مكتبة عنوان الانجاز</h4>
+                <p>نحن هنا لنقدم لكم افضل الحلول الالكترونية لتلبية احتياجاتكم بكل سهولة ويسر سواء كنتم تبحثون
+                     عن خدمات حكومية تجارية , أو شخصية , طلابية فإننا متخصصون وعلى اتم الاستعداد لمساعدتكمعلى تحقيق أهدافكم بسرعة وفعالية</p>
+                <div class="sochial">
+                    <img src="images/whatsapp.png" alt="">
+                    <img src="images/x.png" alt="">
+                    <img src="images/facebook.png" alt="">
+                    <img src="images/instagram.png" alt="">
+                </div>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#home">الرئيسية</a></li>
+                    <li><a href="#features">خدماتنا</a></li>
+                    <li><a href="#massege">رؤيتنا</a></li>
+                    <li><a href="#foteer">اتصل بنا</a></li>
+                </ul>
+            </div>
+            <div class="map">
+
+            </div>
+        </div>
+     </div>
+    <!-- end foteer -->
 </body>
 </html>
