--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <!-- start header -->
-    <header>
+    <header id="home">
         <div class="container">
             <img class="logo" src="images/logo.png" alt="">
             <div class="links">
@@ -206,10 +206,10 @@
                 <p>نحن هنا لنقدم لكم افضل الحلول الالكترونية لتلبية احتياجاتكم بكل سهولة ويسر سواء كنتم تبحثون
                      عن خدمات حكومية تجارية , أو شخصية , طلابية فإننا متخصصون وعلى اتم الاستعداد لمساعدتكمعلى تحقيق أهدافكم بسرعة وفعالية</p>
                 <div class="sochial">
-                    <img src="images/whatsapp.png" alt="">
-                    <img src="images/x.png" alt="">
-                    <img src="images/facebook.png" alt="">
-                    <img src="images/instagram.png" alt="">
+                    <a href="https://api.whatsapp.com/send/?phone=966503505993"><img src="images/whatsapp.png" alt=""></a>
+                    <a href="https://api.whatsapp.com/send/?phone=966503505993"><img src="images/x.png" alt=""></a>
+                    <a href="https://api.whatsapp.com/send/?phone=966503505993"><img src="images/facebook.png" alt=""></a>
+                    <a href="https://api.whatsapp.com/send/?phone=966503505993"><img src="images/instagram.png" alt=""></a>
                 </div>
             </div>
             <div class="menu">
@@ -221,9 +221,10 @@
                 </ul>
             </div>
             <div class="map">
-                <iframe class="map1" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d312.64429749351433!2d47.70480190826609!3d27
-                .557344344742177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2ssa!4v1717775320243!5m2!1sen!2ssa" width="275"
-                 height="180" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="map1" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d468.43733029045325!2d47.70460440231386!3d27.5573060024176!3m2!
+                1i1024!2i768!4f13.1!3m3!1m2!1s0x3fcd758806ceba07%3A0x67f3d856810b1de1!2z2LnZhtmI2KfZhiDYp9mE2KfZhtis2KfYsg!5e0!3m2!1sen!2ssa!4v1
+                717781868939!5m2!1sen!2ssa" width="250" height="180" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy=
+                "no-referrer-when-downgrade"></iframe>           
             </div>
         </div>
      </div>
