--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             </div>
             <div class="featurs">
                 <div class="featur">
-                    <img src="images/absher.png" alt="">
-                    <h3>خدمات أبشر</h3>
-                    <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
+                    <img src="images/absher.png" alt="" href="https://www.api.whatsapp.com/send/?phone=966503505993">
+                    <a href="https://www.api.whatsapp.com/send/?phone=966503505993"><h3>خدمات أبشر</h3></a>
+                    <p>جميع خدمات وزارة الداخلية وخدمات أبشر أفراد وأبشر أعمال, استخراج وتجديد الوثائق الرسمية</p>
                 </div>
                 <div class="featur">
                     <img src="images/teg.png" alt="">
@@ -89,82 +89,82 @@
                 <div class="featur">
                     <img src="images/min.png" alt="">
                     <h3>الخدمات الطلابية</h3>
-                    <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
+                    <p>تصوير تغليف طباعة بحوث تسجيل مدارس طباعة شهادات نور وباركود</p>
                 </div>
                 <div class="featur">
                     <img src="images/nama.png" alt="">
                     <h3>خدمات نماء</h3>
-                    <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
+                    <p>تشريح الابل ترقيم الابل سجل زراعي ادارة بيانات الابل والمواشي استخراج التأشيرات الزراعية وغيرها الكثير من الخدمات</p>
                 </div>
                 <div class="featur">
                     <img src="images/zera.png" alt="">
-                    <h3>خدمات وزارة التجارة</h3>
-                    <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
+                    <h3>خدمات المياه والزراعة</h3>
+                    <p>-</p>
                 </div>
                 <div class="featur">
                     <img src="images/najez.png" alt="">
                     <h3>خدمات ناجز ووزارة العدل</h3>
-                    <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
+                    <p>خدمات الوكالات الاقرارات الدعاوى القضائية الخدمات العدلية الاجتماعية</p>
                 </div>
                 <div class="featur">
                     <img src="images/khrb.png" alt="">
                     <h3>خدمات الشركة السعودية للكهرباء</h3>
-                    <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
+                    <p>سداد الفواتير طلبات الكهرباء والعدادات ونقل ملكية العدادات وتسجيل المستاجرين وغيرها من الخدمات</p>
                 </div>
                 <div class="featur">
                     <img src="images/qiua.png" alt="">
                     <h3>خدمات قوى</h3>
-                    <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
+                    <p>ادارة الملف الشخصي وملف الاعمال على قوى وتنفيذ جميع الخدمات من نقل كفاله العالمين واصدار كرت العمل وغيره من الخدمات المقدمة في منصة قوى</p>
                 </div>
                 <div class="featur">
                     <img src="images/yem.png" alt="">
                     <h3>خدمات السفارة اليمنية</h3>
-                    <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
+                    <p>حجز المواعيد تجديد الجوازات رفع طلب الوكلات الالكترونية وتنسيق معاملات اصدار جوازات المواليد واستخراجها وجميع الخدمات</p>
                 </div>
                 <div class="featur">
                     <img src="images/3ml.png" alt="">
                     <h3>خدمات وزارة العمل</h3>
-                    <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
+                    <p>جميع خدمات وزارة العمل الاكترونية </p>
                 </div>
                 <div class="featur">
                     <img src="images/air001.png" alt="">
                     <h3>خدمات الخطوط الجوية السعودية </h3>
-                    <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
+                    <p>حجز التذاكر اصدار بطاقة الصعود ادارة تذاكر السفر وتعديل مواعيدها والغائها وجميع الخدمات</p>
                 </div>
                 <div class="featur">
                     <img src="images/balady.png" alt="">
                     <h3>الخدمات بلدي</h3>
-                    <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
+                    <p>جميع الخدمات لاصحاب العمل والافراد من استخراج الرخص والفسوحات وادارتها والعديد من الخدمات</p>
                 </div>
                 <div class="featur">
                     <img src="images/kharjy.png" alt="">
                     <h3>خدمات وزارة الخارجية</h3>
-                    <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
+                    <p>استخراج تاشيرات الزيارة العائلية للمقيمين وزوجات المواطنين والتاشيرات الشخصية والتجارية تمديد الخروج والعودة وغيرها من الخدمات المقدمة من الوزارة</p>
                 </div>
                 <div class="featur">
                     <img src="images/sudan.png" alt="">
                     <h3>خدمات السفارة السودانية </h3>
-                    <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
+                    <p>حجز مواعيد السفارة السودانية اصدار تاشيرات عمان للزيارة الشخصية والعائلية والتجارية للجنسية السودانية بغرض اصدار فيز عمل جديدة</p>
                 </div>
                 <div class="featur">
                     <img src="images/mor.png" alt="">
                     <h3>المرور</h3>
-                    <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
+                    <p>حجز المواعيد اصدار رخص القيادة ورخص السير وتجديدها والتامين الشامل والتامين ضد الغير وحجز مواعيد مدارس القيادة وغيرها من الخدمات</p>
                 </div>
                 <div class="featur">
                     <img src="images/adel.png" alt="">
-                    <h3>خدمات أبشر</h3>
-                    <p>جميع خدمات وزارة الداخلية وخدمات أبشر , استخراج وتجديد الوثائق الرسمية ( الهويات , جوازات السفر , رخص القيادة )</p>
+                    <h3>خدمات اديل</h3>
+                    <p>حجز التذاكر وادارتها والغائها واسترجاعها</p>
                 </div>
                 <div class="featur">
                     <img src="images/nas.png" alt="">
-                    <h3>الخدمات التجارية</h3>
-                    <p>تاسيس الشركات , واجرائات التسجيل التجاري ( تصميم وتطوير المواقع الالكترونية , البنرات , الفيديو اديتينج )</p>
+                    <h3>خدمات ناس وناسمايلز</h3>
+                    <p>حجز التذاكر وادارتها والغائها واسترجاعها والكثير من الخدمات</p>
                 </div>
                 <div class="featur">
                     <img src="images/qat.png" alt="">
-                    <h3>الخدمات الطلابية</h3>
-                    <p>دفع الفواتير (الكهرباء والماء والهاتف ) حجوزات تذاكر الطيران والفنادق تمديد الزيارات واستخراجها والتاشيرات</p>
+                    <h3>خدمات الخطوط الجوية القطرية</h3>
+                    <p>حجز التذاكر وادارتها والغائها واسترجاعها وغيرها من الخدمات</p>
                 </div>
 
             </div>
@@ -203,8 +203,11 @@
         <div class="container">
             <div class="royaa">
                 <h4>مكتبة عنوان الانجاز</h4>
-                <p>نحن هنا لنقدم لكم افضل الحلول الالكترونية لتلبية احتياجاتكم بكل سهولة ويسر سواء كنتم تبحثون
-                     عن خدمات حكومية تجارية , أو شخصية , طلابية فإننا متخصصون وعلى اتم الاستعداد لمساعدتكمعلى تحقيق أهدافكم بسرعة وفعالية</p>
+                <p>قرية العليا</p>
+                <p>شارع الملك خالد</p>
+                <p>جوار مغسله الساعة ومقابل مفروشات الشمال</p>
+                <p>للتواصل / 00966503505993
+                </p>
                 <div class="sochial">
                     <a href="https://api.whatsapp.com/send/?phone=966503505993"><img src="images/whatsapp.png" alt=""></a>
                     <a href="https://api.whatsapp.com/send/?phone=966503505993"><img src="images/x.png" alt=""></a>
